--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "ws": "^8.18.0"
   }
 }
