--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,17 @@
 {
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "main": "server.js", 
+  "scripts": {
+    "start": "node server.js"  // Ensure this points to your entry point
+  },
   "devDependencies": {
     "tailwindcss": "^3.4.12"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "express": "^4.17.1"
   }
 }
+
