--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jest": "^29.7.0",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
