--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "ws": "^8.18.0"
   }
 }
