--- a/green-banking/templates/backend-service.yaml
+++ b/green-banking/templates/backend-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: backend-service
 spec:
-  type: { { .Values.backend.service.type } }
+  type: ClusterIP
   selector:
     { { - include "green-banking.backend.selectorLabels" . | nindent 4 } }
   ports:
