--- a/k8s/templates/ingress/ingress.yaml
+++ b/k8s/templates/ingress/ingress.yaml
@@ -10,7 +10,7 @@ spec:
     - host: localhost
       http:
         paths:
-          - path: /
+          - path: /frontend
             pathType: Prefix
             backend:
               service:
